src/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base {
  :root {
    --text-50: #ede5ff;
    --text-100: #daccff;
    --text-200: #b699ff;
    --text-300: #9166ff;
    --text-400: #6d33ff;
    --text-500: #4800ff;
    --text-600: #3a00cc;
    --text-700: #2b0099;
    --text-800: #1d0066;
    --text-900: #0e0033;
    --text-950: #07001a;
    
    --background-50: #ece5ff;
    --background-100: #daccff;
    --background-200: #b499ff;
    --background-300: #8f66ff;
    --background-400: #6933ff;
    --background-500: #4400ff;
    --background-600: #3600cc;
    --background-700: #290099;
    --background-800: #1b0066;
    --background-900: #0e0033;
    --background-950: #07001a;

    --neutral-1: #f4f4f4;
    --neutral-2: #ffffff;
    
    --primary-50: #ede6ff;
    --primary-100: #dbccff;
    --primary-200: #b69afe;
    --primary-300: #9267fe;
    --primary-400: #6d34fe;
    --primary-500: #4901fe;
    --primary-600: #3a01cb;
    --primary-700: #2c0198;
    --primary-800: #1d0165;
    --primary-900: #0f0033;
    --primary-950: #070019;
    
    --secondary-50: #ede5ff;
    --secondary-100: #daccff;
    --secondary-200: #b699ff;
    --secondary-300: #9166ff;
    --secondary-400: #6d33ff;
    --secondary-500: #4800ff;
    --secondary-600: #3a00cc;
    --secondary-700: #2b0099;
    --secondary-800: #1d0066;
    --secondary-900: #0e0033;
    --secondary-950: #07001a;
    
    --accent-50: #ede6ff;
    --accent-100: #dbccff;
    --accent-200: #b69afe;
    --accent-300: #9267fe;
    --accent-400: #6d34fe;
    --accent-500: #4901fe;
    --accent-600: #3a01cb;
    --accent-700: #2c0198;
    --accent-800: #1d0165;
    --accent-900: #0f0033;
    --accent-950: #070019;
    
  }
  .dark {
    --text-50: #07001a;
    --text-100: #0e0033;
    --text-200: #1d0066;
    --text-300: #2b0099;
    --text-400: #3a00cc;
    --text-500: #4800ff;
    --text-600: #6d33ff;
    --text-700: #9166ff;
    --text-800: #b699ff;
    --text-900: #daccff;
    --text-950: #ede5ff;
    
    --background-50: #07001a;
    --background-100: #0e0033;
    --background-200: #1b0066;
    --background-300: #290099;
    --background-400: #3600cc;
    --background-500: #4400ff;
    --background-600: #6933ff;
    --background-700: #8f66ff;
    --background-800: #b499ff;
    --background-900: #daccff;
    --background-950: #ece5ff;
    
    --primary-50: #070019;
    --primary-100: #0f0033;
    --primary-200: #1d0165;
    --primary-300: #2c0198;
    --primary-400: #3a01cb;
    --primary-500: #4901fe;
    --primary-600: #6d34fe;
    --primary-700: #9267fe;
    --primary-800: #b69afe;
    --primary-900: #dbccff;
    --primary-950: #ede6ff;
    
    --secondary-50: #07001a;
    --secondary-100: #0e0033;
    --secondary-200: #1d0066;
    --secondary-300: #2b0099;
    --secondary-400: #3a00cc;
    --secondary-500: #4800ff;
    --secondary-600: #6d33ff;
    --secondary-700: #9166ff;
    --secondary-800: #b699ff;
    --secondary-900: #daccff;
    --secondary-950: #ede5ff;
    
    --accent-50: #070019;
    --accent-100: #0f0033;
    --accent-200: #1d0165;
    --accent-300: #2c0198;
    --accent-400: #3a01cb;
    --accent-500: #4901fe;
    --accent-600: #6d34fe;
    --accent-700: #9267fe;
    --accent-800: #b69afe;
    --accent-900: #dbccff;
    --accent-950: #ede6ff;
    
  }
}



  @keyframes portrait-animation{
    0% {
        box-shadow: 10px -10px 0px #9166ff, 20px -20px 0px #3a01cb;
        transform: translateY(-8px);
    }
    100% {
        box-shadow: -10px 10px 0px #9166ff, 20px 20px 0px #3a01cb;
    }
}

#portrait {
  animation: portrait-animation 4s ease-in-out 0s infinite alternate none;
}


/* Content wrapper background by SVGbaggrounds.com*/
#hero-svg {
  background-image: url(/src/media/svg-background.svg);
}

#about-svg {
  background-image: url(/src/media/svg-background.svg);
}

